# dagrid

./: .gitignore  Cargo.toml  README.md  flake.nix  optimizations.md  run.sh  todo.md
.cargo/: config.toml
benches/: controlgraph.rs
lib/core/: Cargo.toml
lib/core/src/: container.rs  control.rs  lib.rs  node.rs  presets.rs  sample.rs  vis.rs
lib/core/src/tests/: common.rs  glicol.rs  mod.rs
lib/nih_plug_vello/: Cargo.toml
lib/nih_plug_vello/src/: editor.rs  lib.rs
lib/plugin/: Cargo.toml
lib/plugin-export/: Cargo.toml
lib/plugin-export/src/: lib.rs
lib/plugin/src/: gui.rs  lib.rs  params.rs  plug.rs
lib/vello-baseview/: Cargo.toml
lib/vello-baseview/src/: lib.rs  simple_text.rs
src/: container.rs  control.rs  lib.rs  main.rs  util.rs  vis.rs
src/tests/: glicol.rs  mod.rs
