[package]
name = "dagrid-core"
version = "0.3.4"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
petgraph = { version = "0.6", features = ["serde", "serde-1", "serde_derive"] }
postcard = { version = "1.0.8", default-features = false, features = [
    "use-std",
] }
serde = { version = "1.0.204", features = ["derive"] }
typetag = "0.2.16"

[dev-dependencies]
glicol = "0.13"
owo-colors = "4"
