[package]
name = "dagrid-plugin-export"
version = "0.0.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", version = "0.0.0", features = [
    "simd",
] }
dagrid-plugin = { path = "../plugin" }
