[package]
name = "vello-baseview"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
vello = "0.2.1"
pollster = "0.3.0"
